...
      currentBuildingCodes,
      handleSelect,
    ],
  );

  return (
    <View style={styles.buildingSelectionContainer} testID="building-selection">
      <View style={styles.inputRow}>
        {mode === "browse" ? (
          renderInput("end", "Search building")
        ) : (
          <View
            style={[
              { backgroundColor: theme.buildingSelection.containerBackground },
              styles.directionContainer,
              shouldUseHorizontalWebDirectionsLayout &&
...
