...
  useMapEvents,
} from "react-leaflet";
import RoutesInfoPopup, {
  RouteStepSelectionContext,
} from "../navigation/routes-info-popup";
import BuildingInfoPopup from "./building-info-popup";
import BuildingSelection, { CURRENT_LOCATION_CODE } from "./building-selection";
import CampusToggle from "./campus-toggle";
import LocationButton, { LocationButtonProps } from "./location-button";
import LocationModal from "./location-modal";
import OutdoorMapSettings from "./outdoor-map-settings";
import { POIInfoPopup } from "./poi-info-popup";

...
    region.longitude - SGW_CENTER.longitude,
  );
  const loyDistance = Math.hypot(
    region.latitude - LOY_CENTER.latitude,
    region.longitude - LOY_CENTER.longitude,
  );
  return sgwDistance <= loyDistance ? "SGW" : "LOY";
}

function getPoiMarkerColor(types: string[]): string {
  const typeSet = new Set(types.map((type) => type.toLowerCase()));

  if (typeSet.has("cafe")) {
...
