appId: host.exp.exponent
---
- runFlow:
    when:
      notVisible:
        id: "building-selection"
    file: ../openLink.yaml
- tapOn:
    text: "Search building"
- inputText: "H907"
- tapOn:
    id: "end-result-H"
- assertVisible:
    id: "rooms-action-button"
- tapOn:
    id: "rooms-action-button"
- assertVisible:
    id: "SettingsButton"
- tapOn:
    id: "SettingsButton"
- assertVisible:
    id: "wheelchair-accessibility-toggle"
- tapOn:
    id: "wheelchair-accessibility-toggle"
- tapOn:
    id: "SettingsButton"
- assertVisible:
    id: "indoor-start-room-input"
- tapOn:
    id: "indoor-start-room-input"
- inputText: "H101"
- tapOn:
    id: "indoor-end-room-input"
- inputText: "H907"
- assertVisible:
    id: "indoor-create-path-button"
- tapOn:
    id: "indoor-create-path-button"
- assertVisible:
    id: "indoor-path-edge-0"
- assertVisible:
    id: "next-button"
- tapOn:
    id: "next-button"
- tapOn:
    id: "next-button"
- tapOn:
    id: "next-button"
- tapOn:
    id: "next-button"
- tapOn:
    id: "next-button"
- tapOn:
    id: "next-button"
- tapOn:
    id: "next-button"
- tapOn:
    id: "next-button"
- tapOn:
    id: "next-button"
- tapOn:
    id: "next-button"
